--- a/Tournament/Views/PlayOff/StandingsReport.cshtml
+++ b/Tournament/Views/PlayOff/StandingsReport.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ReportViewerForMvc
 
 @{
-    ViewBag.Title = "Standing Report";
+    ViewBag.Title = "Standings Report";
     Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
